This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-06-07:

- Release 1.0.5.

2023-06-05:

- Fixed a bug in command completion: when a shell built-in or defined function
  was preceded in alphabetical order by an undefined function (on FPATH or
  after 'autoload'), the built-in or defined function failed to tab-complete.

2023-06-04:

- Fixed a bug in 'case', introduced in ksh 93t 2008-10-31, where extended
  patterns containing a closing brace ('}') caused a spurious syntax error.

- The POSIX mode was amended to make 'test -e /dev/fd/n' (where n is a file
  descriptor number) actually test for the existence of /dev/fd/n in the
  file system. By default it tests if that file descriptor is open.

2023-06-02:

- Fixed a bug introduced on 2021-04-24 where unsetting a function in a
  subshell hides any built-in command by the same name for the duration
  of that subshell.

2023-05-30:

- Fixed a bug in the 'type -t'/'whence -t' output for an undefined function.

- The autoloadable directory stack and menu-based cd functions in the 'fun'
  directory have been reorganised and fixed to play well together when that
  directory is added to FPATH.

2023-05-29:

- Fixed a bug in bracket expressions in glob patterns where quoting a '!'
  (e.g., to disable its negator function) caused a '\' to be wrongly matched.
  For example,
	case '\' in ['!'X]) echo BAD;; esac
  no longer outputs BAD, and
	touch '\'; ls ['!'X]
  no longer incorrectly lists the file '\'.

2023-05-28:

- Fixed a bug, introduced on 2020-06-08 and exacerbated on 2022-07-02, where
  the exit status of a script did not reflect the signal with the 9th bit
  set if the script exited on receiving a signal and an EXIT trap was set.

2023-05-27:

- Fixed a bug in the handling of backslashes in pathname expansion patterns